# dipe

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
anuies/: Cargo.toml  Config.xlsx  Readme.md  build.rs  program.manifest
anuies/src/: main.rs
becas/: Cargo.toml  limpiar.fish
completions/: xlist.fish
dialogs/: Cargo.toml
dialogs/src/: lib.rs
icups/: Cargo.toml
polars_sheet_reader/: Cargo.toml
polars_sheet_reader/src/: lib.rs
psr/: Cargo.toml
psr/src/: lib.rs
sheet-utils/: Cargo.toml
snii/: Cargo.toml  limpiar.fish
snii/src/: main.rs
strings/: Cargo.toml
strings/src/: lib.rs
trans/: Cargo.toml
trans/src/: main.rs
utils/: Cargo.toml  build.rs  program.manifest
