[workspace]
members = [
    "polars_sheet_reader",
    "strings",
    "sheet-utils",
    "icups_profes",
]
resolver = "2"

[workspace.dependencies]
calamine = "0.24.0"
polars = { version = "0.37.0", default-features = false, features = ["lazy", "strings", "regex", "polars-io"]}
rust_xlsxwriter = "0.63.0"
itertools = "0.12.1"
thiserror = "1.0.57"
polars_excel_writer = "0.7.0"


[profile.release]
# opt-level = "z"
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
# strip = "debuginfo" # TODO: or strip = true
opt-level = 3
