[workspace]
members = [
    "psr",
    "strings",
    "utils",
    "icups", 
    "anuies",
]
resolver = "2"

[workspace.dependencies]
polars = { version = "0.37.0", default-features = false, features = ["lazy", "strings", "regex", "polars-io"]}
clap = { version = "4.5.2", features = ["derive"] }
polars_excel_writer = "0.7.0"
rust_xlsxwriter = "0.63.0"
embed-resource = "2.4.1"
itertools = "0.12.1"
thiserror = "1.0.57"
calamine = "0.24.0"
rfd = "0.14.0"

[profile.release]
opt-level = "z"
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
