cargo-features = ["codegen-backend"]
[workspace]
members = [
  "psr",
  "strings",
  "utils",
  "icups",
  "becas",
  "anuies",
  "dialogs",
  "snii",
]
resolver = "2"

[workspace.dependencies]
polars = { version = "0.37.0", default-features = false, features = [
  "lazy",
  "strings",
  "regex",
  "polars-io",
  "dtype-struct",
  "is_in"
] }
unicode-normalization = { version = "0.1.23", default-features = false }
clap = { version = "4.5.2", features = ["derive"] }
polars_excel_writer = "0.7.0"
rust_xlsxwriter = "0.63.0"
embed-resource = "2.4.1"
itertools = "0.13.0"
thiserror = "1.0.57"
calamine = "0.24.0"
rfd = "0.14.0"
bstr = { version = "1.9.1", features = ["alloc"] }
dirs = "5.0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.dev]
debug = 0
codegen-backend = "cranelift"
opt-level = 0
