[package]
name = "icups_profes"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { workspace = true, default-features = true }
calamine.workspace = true
polars_excel_writer.workspace = true
polars_sheet_reader = { path = "../polars_sheet_reader/" }
