[package]
name = "polars_sheet_reader"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars.workspace = true
calamine.workspace = true
thiserror.workspace = true
itertools.workspace = true
strings = { path = "../strings"}
