[package]
name = "sheet-utils"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_xlsxwriter.workspace = true
thiserror.workspace = true
calamine.workspace = true
itertools.workspace = true
clap.workspace = true
rfd.workspace = true
strings = { path = "../strings/" }
walkdir = "2.4.0"
bstr = "1.9.0"

[build-dependencies]
embed-resource.workspace = true

