[package]
name = "utils"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_xlsxwriter.workspace = true
thiserror.workspace = true
itertools.workspace = true
calamine.workspace = true
bstr.workspace = true
clap.workspace = true
rfd.workspace = true
strings = { path = "../strings/" }
dirs.workspace = true
walkdir = "2.4.0"

[build-dependencies]
embed-resource.workspace = true

